# Synapse-D

./: .gitignore  Brain_Digital Twin.md  Structural_MRI_Strategy_Research.md  pyproject.toml  연구용_브레인_디지털_트윈_Platform_기획서.md
data/: DATA_ACCESS_GUIDE.md
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: RESOURCE_INVENTORY.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ADRiskCard.tsx  BrainViewer.tsx  ConnectomeView.tsx  Dashboard.tsx  LongitudinalChart.tsx  MRIUploader.tsx  MorphometryCharts.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/pages/: AnalyzePage.tsx  DashboardPage.tsx  PatientDetailPage.tsx  PatientsPage.tsx
frontend/src/lib/: api.ts
reports/: full_demo_report.html  simulation_demo.html  sub-bfa00d26_report.html
scripts/: demo.sh  demo_multimodal.sh  generate_report.py
src/synapse_d/: __init__.py  config.py
src/synapse_d/api/: main.py  tasks.py
src/synapse_d/models/: __init__.py  ad_risk.py  brain_age.py  longitudinal.py  normative.py
src/synapse_d/pipeline/: __init__.py  connectome.py  microbleed.py  morphometry.py  preprocessing.py  simulation.py  wmh.py
src/synapse_d/report/: generator.py
src/synapse_d/utils/: bids.py  identity.py  resolution.py  scanner.py
tests/: test_pipeline.py
tvb_worker/: Dockerfile  app.py
